<resources>
    <string name="app_name" translatable="false">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="order">Order</string>
    <string name="orderSummary">Order Summary</string>
    <string name="toppings" translatable="false">Toppings</string>
    <string name="wipedCream">Whipped cream</string>
    <string name="hint">Name</string>
    <string name="Name">\"\nName: \"</string>
    <string name="addwhippedcream">\"\nAdd whipped cream? \"</string>
    <string name="addChocolate">\"\nAdd Chocolate? \"</string>
    <string name="quant">\"\nQuantity: \"</string>
    <string name="total">\nTotal: $</string>
    <string name="thankYou">\nThank You!</string>
</resources>
